--- a/Documents/PSTL/makefile
+++ b/Documents/PSTL/makefile
@@ -6,20 +6,16 @@ INCLUDE=include/
 BIN=bin/
 EXEC=$(BIN)test
 
-SOURCE_ML=$(SRC)instruction.ml $(SRC)env.ml $(SRC)program.ml 
-SOURCE_MLI=$(LIB)instruction.mli $(LIB)env.mli $(LIB)program.mli
-SOURCE_CMI=$(INCLUDE)instruction.cmi $(INCLUDE)env.cmi $(INCLUDE)program.cmi
-SOURCE_CMO=$(OBJ)instruction.cmo $(OBJ)env.cmo $(OBJ)program.cmo
+SOURCE_CMO=$(SRC)point.cmo $(SRC)instruction.cmo $(SRC)environment.cmo $(SRC)program.cmo $(SRC)polygone.cmo $(SRC)test.cmo
 
 
 all: $(EXEC)
 
-$(OBJ)%.cmo: $(INCLUDE)%.cmi $(SRC)%.ml
-	$(CAML) -o $@ -c $?
-$(INCLUDE)%.cmi: $(LIB)%.mli
-	$(CAML) -o $@ -c $?
+$(OBJ)%.cmo: $(SRC)%.ml
+	$(CAML) -c $?
+
 $(EXEC): $(SOURCE_CMO)
-	$(CAML) -o $@ -c $?
+	$(CAML) $? -o $@
 
 clean:
-	rm $(INCLUDE)*.cmi $(OBJ)*.cmo $(SRC)*~ $(EXEC) 
+	rm $(SRC)*.cmo $(SRC)*.cmi $(EXEC) 
