--- a/PSTL/makefile
+++ b/PSTL/makefile
@@ -4,18 +4,21 @@ OBJ=obj/
 SIG=SIG/
 INCLUDE=include/
 BIN=bin/
-EXEC=$(BIN)test
+EXEC=$(BIN)test-basic $(BIN)test-bezier
 
 SOURCE_CMO=$(SRC)point.cmo $(SRC)instruction.cmo $(SRC)environment.cmo $(SRC)program.cmo $(SRC)polygone.cmo $(SRC)test.cmo
-
+SOURCE_CMO_2=$(SRC)point.cmo $(SRC)instruction.cmo $(SRC)environment.cmo $(SRC)program.cmo $(SRC)bezier.cmo
 
 all: $(EXEC)
 
+$(BIN)test-basic: $(SOURCE_CMO)
+	$(CAML) $? -o $@
+
+$(BIN)test-bezier: $(SOURCE_CMO_2)
+	$(CAML) $? -o $@
+
 $(SRC)%.cmo: $(SRC)%.ml
 	$(CAML) -I $(SRC) -c $?
-
-$(EXEC): $(SOURCE_CMO)
-	$(CAML) $? -o $@
 
 clean:
 	rm -f $(SRC)*.cmo $(SRC)*.cmi $(SRC)*~ $(EXEC) 
