--- a/PSTL/makefile
+++ b/PSTL/makefile
@@ -6,16 +6,16 @@ INCLUDE=include/
 BIN=bin/
 EXEC=$(BIN)test-basic $(BIN)test-bezier
 
-SOURCE_CMO=$(SRC)point.cmo $(SRC)instruction.cmo $(SRC)environment.cmo $(SRC)program.cmo $(SRC)polygone.cmo $(SRC)test.cmo
+SOURCE_CMO=$(SRC)point.cmo $(SRC)instruction.cmo $(SRC)environment.cmo $(SRC)program.cmo $(SRC)droite.cmo $(SRC)segment.cmo $(SRC)polygone.cmo $(SRC)test.cmo
 SOURCE_CMO_2=$(SRC)point.cmo $(SRC)instruction.cmo $(SRC)environment.cmo $(SRC)program.cmo $(SRC)bezier.cmo
 
 all: $(EXEC)
 
 $(BIN)test-basic: $(SOURCE_CMO)
-	$(CAML) $? -o $@
+	$(CAML) -I $(SRC) $? -o $@
 
 $(BIN)test-bezier: $(SOURCE_CMO_2)
-	$(CAML) $? -o $@
+	$(CAML) -I $(SRC) $? -o $@
 
 $(SRC)%.cmo: $(SRC)%.ml
 	$(CAML) -I $(SRC) -c $?
